--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-separator": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.5",
