--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 # next.js
 /.next/
 /out/
+.next
+out
 
 # production
 /build
@@ -32,6 +34,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
 
 # vercel
 .vercel
@@ -40,4 +43,5 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-.vercel
+# Supabase
+supabase/config.toml
