--- a/package.json
+++ b/package.json
@@ -9,24 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.2.4",
-    "@radix-ui/react-separator": "^1.1.3",
     "@supabase/supabase-js": "^2.49.4",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.6.5",
-    "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "react": "^19.0.0",
-    "react-confetti": "^6.4.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5",
-    "zustand": "^5.0.3"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
